# miniprojet

./: CMakeLists.txt  Idée projet.txt
fichier/: scores.txt
src/: Lancement.cpp  Lancement.h  MainWindow.cpp  MainWindow.h  MyScene.cpp  MyScene.h  MyView.h  Rejouer.cpp  Rejouer.h  Utils.h  main.cpp  test.h
